// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation of the OptionGroup control (inherit) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType={0}
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="inherit"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="inherit"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="inherit"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType={0}
      selected={true}
      sizing="inherit"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="inherit"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="inherit"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control (large) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType={0}
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="large"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="large"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="large"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType={0}
      selected={true}
      sizing="large"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="large"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="large"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control (medium) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType={0}
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="medium"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="medium"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="medium"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType={0}
      selected={true}
      sizing="medium"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="medium"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="medium"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control (normal) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType={0}
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="normal"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="normal"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType={0}
      selected={true}
      sizing="normal"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="normal"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="normal"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control (small) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType={0}
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="small"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="small"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="small"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType={0}
      selected={true}
      sizing="small"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="small"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="small"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control (xlarge) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType={0}
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="xlarge"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="xlarge"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="xlarge"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType={0}
      selected={true}
      sizing="xlarge"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="xlarge"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="xlarge"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control (xsmall) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType={0}
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="xsmall"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="xsmall"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="xsmall"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType={0}
      selected={true}
      sizing="xsmall"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="xsmall"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="xsmall"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control (xxlarge) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType={0}
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="xxlarge"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="xxlarge"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="xxlarge"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType={0}
      selected={true}
      sizing="xxlarge"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="xxlarge"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="xxlarge"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control (xxsmall) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType={0}
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="xxsmall"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="xxsmall"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="xxsmall"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType={0}
      selected={true}
      sizing="xxsmall"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="xxsmall"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType={0}
      selected={false}
      sizing="xxsmall"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control of type (0) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType="square"
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="normal"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="normal"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType="square"
      selected={true}
      sizing="normal"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="square"
      selected={false}
      sizing="normal"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="square"
      selected={false}
      sizing="normal"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control of type (1) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType="squareFilled"
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="normal"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="normal"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType="squareFilled"
      selected={true}
      sizing="normal"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="squareFilled"
      selected={false}
      sizing="normal"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="squareFilled"
      selected={false}
      sizing="normal"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control of type (2) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType="squareReverse"
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="normal"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="normal"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType="squareReverse"
      selected={true}
      sizing="normal"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="squareReverse"
      selected={false}
      sizing="normal"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="squareReverse"
      selected={false}
      sizing="normal"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control of type (3) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType="circle"
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="normal"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="normal"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType="circle"
      selected={true}
      sizing="normal"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="circle"
      selected={false}
      sizing="normal"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="circle"
      selected={false}
      sizing="normal"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control of type (4) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType="circleFilled"
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="normal"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="normal"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType="circleFilled"
      selected={true}
      sizing="normal"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="circleFilled"
      selected={false}
      sizing="normal"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="circleFilled"
      selected={false}
      sizing="normal"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control of type (5) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType="circleReverse"
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="normal"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="normal"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType="circleReverse"
      selected={true}
      sizing="normal"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="circleReverse"
      selected={false}
      sizing="normal"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="circleReverse"
      selected={false}
      sizing="normal"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control of type (6) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType="times"
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="normal"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="normal"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType="times"
      selected={true}
      sizing="normal"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="times"
      selected={false}
      sizing="normal"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="times"
      selected={false}
      sizing="normal"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control of type (7) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType="timesReverse"
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="normal"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="normal"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType="timesReverse"
      selected={true}
      sizing="normal"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="timesReverse"
      selected={false}
      sizing="normal"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="timesReverse"
      selected={false}
      sizing="normal"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control of type (8) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType="dot"
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="normal"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="normal"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType="dot"
      selected={true}
      sizing="normal"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="dot"
      selected={false}
      sizing="normal"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="dot"
      selected={false}
      sizing="normal"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Creation of the OptionGroup control of type (9) 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onError={[Function]}
  onSelect={[Function]}
  optionType="star"
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.div
    className="ui-option-group test-class"
    sizing="normal"
  >
    <Styled(Title)
      className="ui-option-group-title"
      layout={6}
      noedit={true}
      noripple={true}
      sizing="normal"
      title="test options"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={true}
      onClick={[Function]}
      optionType="star"
      selected={true}
      sizing="normal"
      text="option1"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="star"
      selected={false}
      sizing="normal"
      text="option2"
    />
    <Styled(Option)
      controlled={false}
      disabled={false}
      initialToggle={false}
      onClick={[Function]}
      optionType="star"
      selected={false}
      sizing="normal"
      text="option3"
    />
  </styled.div>
</Wrapper>
`;

exports[`Test disabling of the OptionGroup control 1`] = `
<OptionGroup
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  default="option1"
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="OptionGroup"
  onSelect={[Function]}
  optionType={0}
  options={
    Array [
      "option1",
      "option2",
      "option3",
    ]
  }
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="test options"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of OptionGroup props object 1`] = `
Object {
  "bottom": null,
  "children": null,
  "className": null,
  "contentEditable": false,
  "controlled": true,
  "default": "",
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "id": null,
  "left": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "notooltip": false,
  "obj": "OptionGroup",
  "onSelect": [Function],
  "optionType": 0,
  "options": Array [],
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "title": "",
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;
